# playground_otlp

./: .gitmodules  CMakeLists.txt  Dockerfile  example.cpp  example.h  logfmt_exporter.h  main.cpp  otlp_sink.h  update_needed_submodules.sh
